--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<p>Microsoft Certified Azure Fundamentals</p>
 					<p>Issue date- May 2022</p>
 			</h5>
-				<h5>Google Cloud Community India</h5>
+				<h5>Google Cloud Community India
 				<p>30 Days of Google Cloud </p>
 				<p>Issue date- November 2021</p>
+			</h5>
 			</div>
 			<div class="clearfix"></div>
 			</div>
