--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="contact-grid-agileinfo">
 						<div class="col-md-4 col-sm-4 col-xs-4 contact-icon-wthree">
-							<h4>Address</h4>
+							<h4>Location</h4>
 						</div>
 						<div class="col-md-8 col-sm-8 col-xs-8 contact-text-agileinfo">
-							<p>C/H-59, Kadambari Nagar,<br> Housing Board Colony, Near Silicon City, Rau, 
-								 Indore,PIN-452012,<br> Madhya Pradesh  INDIA.
+							<p>Rau, 
+								 Indore,PIN-452012,<br> Madhya Pradesh, INDIA.
 						</div>
 						<div class="clearfix"></div>
 					</div>
