--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h2 class="w3ls-bnrtext">I am <span> a Technoid. </span>Meticulous.<span> </span> Inquisitive.</h2>
 					<p class="w3ls-p">I believe to ideate, innovate & create. </p>
 					<a href="https://docs.google.com/document/d/1vs2M01C6ud3fyRi2T0rFBTCvx8gw4T-c8ck3U5vo1MQ/edit?usp=sharing" class="buy btn-wayra scroll">
+						RESUME
 					</a>
 				</div>
 			</div>
